[package]
name = "api-debugger"
version = "1.0.0"
description = "企业级 API 调试工具"
authors = ["Developer"]
edition = "2021"

[lib]
name = "api_debugger_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "gzip", "brotli"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
